# Your-First-Finalcial-Assitant

./: .gitignore  README.md  main.py  pyproject.toml
src/: .env_example
src/core/: llm_client.py  prompt.py  service.py
src/utils/excel/: model.py
src/utils/llm/: data_model.py
